160123950_tac/parser.output
Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: declarations declaration
    3             | declaration
    4             | error

    5 declaration: function_declaration_statement
    6            | variable_declaration_statement

    7 block: '{' statements '}'

    8 statements: statements statement
    9           | statement

   10 statement: expression_statement
   11          | io_statement
   12          | return_statement
   13          | variable_declaration_statement
   14          | for_statement
   15          | if_else_statement
   16          | block
   17          | error

   18 $@1: %empty

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' $@1 parameters_optative ')' statement

   20 $@2: %empty

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' $@2 parameters_optative ')' statement

   22 parameters_optative: %empty
   23                    | parameters

   24 parameters: parameters ',' parameter
   25           | parameter

   26 parameter: SIMPLE_TYPE IDENTIFIER
   27          | SIMPLE_TYPE LIST_TYPE IDENTIFIER

   28 for_statement: RW_FOR '(' expression_optative ';' or_expression_optative ';' expression_optative ')' statement

   29 if_else_statement: RW_IF '(' expression ')' statement
   30                  | RW_IF '(' expression ')' statement RW_ELSE statement

   31 expression_statement: expression ';'

   32 io_statement: input_statement
   33             | output_statement

   34 input_statement: IO_READ '(' IDENTIFIER ')' ';'

   35 output_statement: IO_WRITE '(' expression ')' ';'
   36                 | IO_WRITE '(' LIT_STRING ')' ';'

   37 return_statement: RW_RETURN expression ';'

   38 expression: IDENTIFIER '=' expression
   39           | or_expression

   40 function_call_expression: IDENTIFIER '(' function_arguments_optative ')'

   41 function_arguments_optative: %empty
   42                            | function_arguments

   43 function_arguments: function_arguments ',' expression
   44                   | expression

   45 expression_optative: %empty
   46                    | expression

   47 or_expression_optative: %empty
   48                       | or_expression

   49 or_expression: or_expression LOGICAL_OP_OR and_expression
   50              | and_expression

   51 and_expression: and_expression LOGICAL_OP_AND equality_expression
   52               | equality_expression

   53 equality_expression: equality_expression EQUALITY_OP relational_expression
   54                    | relational_expression

   55 relational_expression: relational_expression RELATIONAL_OP list_expression
   56                      | list_expression

   57 list_expression: addition_expression BINARY_LIST_OP list_expression
   58                | addition_expression

   59 addition_expression: addition_expression ARITMETIC_OP_ADDITIVE multiplication_expression
   60                    | multiplication_expression

   61 multiplication_expression: multiplication_expression ARITMETIC_OP_MULTIPLICATIVE simple_value
   62                          | simple_value

   63 simple_value: constant
   64             | IDENTIFIER
   65             | ARITMETIC_OP_ADDITIVE simple_value
   66             | '!' simple_value
   67             | UNARY_LIST_OP simple_value
   68             | '(' expression ')'
   69             | function_call_expression

   70 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER ';'
   71                               | SIMPLE_TYPE LIST_TYPE IDENTIFIER ';'

   72 constant: C_INTEGER
   73         | C_FLOAT
   74         | C_NIL


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 66
    '(' (40) 19 21 28 29 30 34 35 36 40 68
    ')' (41) 19 21 28 29 30 34 35 36 40 68
    ',' (44) 24 43
    ';' (59) 28 31 34 35 36 37 70 71
    '=' (61) 38
    '{' (123) 7
    '}' (125) 7
    error (256) 4 17
    C_INTEGER <token> (258) 72
    C_FLOAT <token> (259) 73
    C_NIL <token> (260) 74
    LIT_STRING <token> (261) 36
    SIMPLE_TYPE <token> (262) 19 21 26 27 70 71
    LIST_TYPE <token> (263) 21 27 71
    IDENTIFIER <token> (264) 19 21 26 27 34 38 40 64 70 71
    RW_FOR <token> (265) 28
    RW_RETURN <token> (266) 37
    RW_IF <token> (267) 29 30
    RW_ELSE <token> (268) 30
    IO_READ <token> (269) 34
    IO_WRITE <token> (270) 35 36
    BINARY_LIST_OP <token> (271) 57
    UNARY_LIST_OP <token> (272) 67
    ARITMETIC_OP_ADDITIVE <token> (273) 59 65
    ARITMETIC_OP_MULTIPLICATIVE <token> (274) 61
    RELATIONAL_OP <token> (275) 55
    EQUALITY_OP <token> (276) 53
    LOGICAL_OP_OR <token> (277) 49
    LOGICAL_OP_AND <token> (278) 51
    THEN (279)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program <node> (34)
        on left: 1
        on right: 0
    declarations <node> (35)
        on left: 2 3 4
        on right: 1 2
    declaration <node> (36)
        on left: 5 6
        on right: 2 3
    block <node> (37)
        on left: 7
        on right: 16
    statements <node> (38)
        on left: 8 9
        on right: 7 8
    statement <node> (39)
        on left: 10 11 12 13 14 15 16 17
        on right: 8 9 19 21 28 29 30
    function_declaration_statement <node> (40)
        on left: 19 21
        on right: 5
    $@1 (41)
        on left: 18
        on right: 19
    $@2 (42)
        on left: 20
        on right: 21
    parameters_optative <node> (43)
        on left: 22 23
        on right: 19 21
    parameters <node> (44)
        on left: 24 25
        on right: 23 24
    parameter <node> (45)
        on left: 26 27
        on right: 24 25
    for_statement <node> (46)
        on left: 28
        on right: 14
    if_else_statement <node> (47)
        on left: 29 30
        on right: 15
    expression_statement <node> (48)
        on left: 31
        on right: 10
    io_statement <node> (49)
        on left: 32 33
        on right: 11
    input_statement <node> (50)
        on left: 34
        on right: 32
    output_statement <node> (51)
        on left: 35 36
        on right: 33
    return_statement <node> (52)
        on left: 37
        on right: 12
    expression <node> (53)
        on left: 38 39
        on right: 29 30 31 35 37 38 43 44 46 68
    function_call_expression <node> (54)
        on left: 40
        on right: 69
    function_arguments_optative <node> (55)
        on left: 41 42
        on right: 40
    function_arguments <node> (56)
        on left: 43 44
        on right: 42 43
    expression_optative <node> (57)
        on left: 45 46
        on right: 28
    or_expression_optative <node> (58)
        on left: 47 48
        on right: 28
    or_expression <node> (59)
        on left: 49 50
        on right: 39 48 49
    and_expression <node> (60)
        on left: 51 52
        on right: 49 50 51
    equality_expression <node> (61)
        on left: 53 54
        on right: 51 52 53
    relational_expression <node> (62)
        on left: 55 56
        on right: 53 54 55
    list_expression <node> (63)
        on left: 57 58
        on right: 55 56 57
    addition_expression <node> (64)
        on left: 59 60
        on right: 57 58 59
    multiplication_expression <node> (65)
        on left: 61 62
        on right: 59 60 61
    simple_value <node> (66)
        on left: 63 64 65 66 67 68 69
        on right: 61 62 65 66 67
    variable_declaration_statement <node> (67)
        on left: 70 71
        on right: 6 13
    constant <node> (68)
        on left: 72 73 74
        on right: 63


State 0

    0 $accept: • program $end

    error        shift, and go to state 1
    SIMPLE_TYPE  shift, and go to state 2

    program                         go to state 3
    declarations                    go to state 4
    declaration                     go to state 5
    function_declaration_statement  go to state 6
    variable_declaration_statement  go to state 7


State 1

    4 declarations: error •

    $end         reduce using rule 4 (declarations)
    SIMPLE_TYPE  reduce using rule 4 (declarations)


State 2

   19 function_declaration_statement: SIMPLE_TYPE • IDENTIFIER '(' $@1 parameters_optative ')' statement
   21                               | SIMPLE_TYPE • LIST_TYPE IDENTIFIER '(' $@2 parameters_optative ')' statement
   70 variable_declaration_statement: SIMPLE_TYPE • IDENTIFIER ';'
   71                               | SIMPLE_TYPE • LIST_TYPE IDENTIFIER ';'

    LIST_TYPE   shift, and go to state 8
    IDENTIFIER  shift, and go to state 9


State 3

    0 $accept: program • $end

    $end  shift, and go to state 10


State 4

    1 program: declarations •
    2 declarations: declarations • declaration

    SIMPLE_TYPE  shift, and go to state 2

    $end  reduce using rule 1 (program)

    declaration                     go to state 11
    function_declaration_statement  go to state 6
    variable_declaration_statement  go to state 7


State 5

    3 declarations: declaration •

    $end         reduce using rule 3 (declarations)
    SIMPLE_TYPE  reduce using rule 3 (declarations)


State 6

    5 declaration: function_declaration_statement •

    $end         reduce using rule 5 (declaration)
    SIMPLE_TYPE  reduce using rule 5 (declaration)


State 7

    6 declaration: variable_declaration_statement •

    $end         reduce using rule 6 (declaration)
    SIMPLE_TYPE  reduce using rule 6 (declaration)


State 8

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE • IDENTIFIER '(' $@2 parameters_optative ')' statement
   71 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 12


State 9

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER • '(' $@1 parameters_optative ')' statement
   70 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER • ';'

    '('  shift, and go to state 13
    ';'  shift, and go to state 14


State 10

    0 $accept: program $end •

    $default  accept


State 11

    2 declarations: declarations declaration •

    $end         reduce using rule 2 (declarations)
    SIMPLE_TYPE  reduce using rule 2 (declarations)


State 12

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER • '(' $@2 parameters_optative ')' statement
   71 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER • ';'

    '('  shift, and go to state 15
    ';'  shift, and go to state 16


State 13

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' • $@1 parameters_optative ')' statement

    SIMPLE_TYPE  reduce using rule 18 ($@1)
    ')'          reduce using rule 18 ($@1)

    $@1  go to state 17


State 14

   70 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER ';' •

    $end         reduce using rule 70 (variable_declaration_statement)
    SIMPLE_TYPE  reduce using rule 70 (variable_declaration_statement)


State 15

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' • $@2 parameters_optative ')' statement

    SIMPLE_TYPE  reduce using rule 20 ($@2)
    ')'          reduce using rule 20 ($@2)

    $@2  go to state 18


State 16

   71 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER ';' •

    $end         reduce using rule 71 (variable_declaration_statement)
    SIMPLE_TYPE  reduce using rule 71 (variable_declaration_statement)


State 17

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' $@1 • parameters_optative ')' statement

    SIMPLE_TYPE  shift, and go to state 19

    ')'  reduce using rule 22 (parameters_optative)

    parameters_optative  go to state 20
    parameters           go to state 21
    parameter            go to state 22


State 18

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' $@2 • parameters_optative ')' statement

    SIMPLE_TYPE  shift, and go to state 19

    ')'  reduce using rule 22 (parameters_optative)

    parameters_optative  go to state 23
    parameters           go to state 21
    parameter            go to state 22


State 19

   26 parameter: SIMPLE_TYPE • IDENTIFIER
   27          | SIMPLE_TYPE • LIST_TYPE IDENTIFIER

    LIST_TYPE   shift, and go to state 24
    IDENTIFIER  shift, and go to state 25


State 20

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' $@1 parameters_optative • ')' statement

    ')'  shift, and go to state 26


State 21

   23 parameters_optative: parameters •
   24 parameters: parameters • ',' parameter

    ','  shift, and go to state 27

    ')'  reduce using rule 23 (parameters_optative)


State 22

   25 parameters: parameter •

    ')'  reduce using rule 25 (parameters)
    ','  reduce using rule 25 (parameters)


State 23

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' $@2 parameters_optative • ')' statement

    ')'  shift, and go to state 28


State 24

   27 parameter: SIMPLE_TYPE LIST_TYPE • IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 25

   26 parameter: SIMPLE_TYPE IDENTIFIER •

    ')'  reduce using rule 26 (parameter)
    ','  reduce using rule 26 (parameter)


State 26

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' $@1 parameters_optative ')' • statement

    error                  shift, and go to state 30
    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    SIMPLE_TYPE            shift, and go to state 34
    IDENTIFIER             shift, and go to state 35
    RW_FOR                 shift, and go to state 36
    RW_RETURN              shift, and go to state 37
    RW_IF                  shift, and go to state 38
    IO_READ                shift, and go to state 39
    IO_WRITE               shift, and go to state 40
    UNARY_LIST_OP          shift, and go to state 41
    '{'                    shift, and go to state 42
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    block                           go to state 46
    statement                       go to state 47
    for_statement                   go to state 48
    if_else_statement               go to state 49
    expression_statement            go to state 50
    io_statement                    go to state 51
    input_statement                 go to state 52
    output_statement                go to state 53
    return_statement                go to state 54
    expression                      go to state 55
    function_call_expression        go to state 56
    or_expression                   go to state 57
    and_expression                  go to state 58
    equality_expression             go to state 59
    relational_expression           go to state 60
    list_expression                 go to state 61
    addition_expression             go to state 62
    multiplication_expression       go to state 63
    simple_value                    go to state 64
    variable_declaration_statement  go to state 65
    constant                        go to state 66


State 27

   24 parameters: parameters ',' • parameter

    SIMPLE_TYPE  shift, and go to state 19

    parameter  go to state 67


State 28

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' $@2 parameters_optative ')' • statement

    error                  shift, and go to state 30
    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    SIMPLE_TYPE            shift, and go to state 34
    IDENTIFIER             shift, and go to state 35
    RW_FOR                 shift, and go to state 36
    RW_RETURN              shift, and go to state 37
    RW_IF                  shift, and go to state 38
    IO_READ                shift, and go to state 39
    IO_WRITE               shift, and go to state 40
    UNARY_LIST_OP          shift, and go to state 41
    '{'                    shift, and go to state 42
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    block                           go to state 46
    statement                       go to state 68
    for_statement                   go to state 48
    if_else_statement               go to state 49
    expression_statement            go to state 50
    io_statement                    go to state 51
    input_statement                 go to state 52
    output_statement                go to state 53
    return_statement                go to state 54
    expression                      go to state 55
    function_call_expression        go to state 56
    or_expression                   go to state 57
    and_expression                  go to state 58
    equality_expression             go to state 59
    relational_expression           go to state 60
    list_expression                 go to state 61
    addition_expression             go to state 62
    multiplication_expression       go to state 63
    simple_value                    go to state 64
    variable_declaration_statement  go to state 65
    constant                        go to state 66


State 29

   27 parameter: SIMPLE_TYPE LIST_TYPE IDENTIFIER •

    ')'  reduce using rule 27 (parameter)
    ','  reduce using rule 27 (parameter)


State 30

   17 statement: error •

    $end         reduce using rule 17 (statement)
    SIMPLE_TYPE  reduce using rule 17 (statement)


State 31

   72 constant: C_INTEGER •

    BINARY_LIST_OP               reduce using rule 72 (constant)
    ';'                          reduce using rule 72 (constant)
    ARITMETIC_OP_ADDITIVE        reduce using rule 72 (constant)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 72 (constant)
    RELATIONAL_OP                reduce using rule 72 (constant)
    EQUALITY_OP                  reduce using rule 72 (constant)
    LOGICAL_OP_OR                reduce using rule 72 (constant)
    LOGICAL_OP_AND               reduce using rule 72 (constant)


State 32

   73 constant: C_FLOAT •

    BINARY_LIST_OP               reduce using rule 73 (constant)
    ';'                          reduce using rule 73 (constant)
    ARITMETIC_OP_ADDITIVE        reduce using rule 73 (constant)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 73 (constant)
    RELATIONAL_OP                reduce using rule 73 (constant)
    EQUALITY_OP                  reduce using rule 73 (constant)
    LOGICAL_OP_OR                reduce using rule 73 (constant)
    LOGICAL_OP_AND               reduce using rule 73 (constant)


State 33

   74 constant: C_NIL •

    BINARY_LIST_OP               reduce using rule 74 (constant)
    ';'                          reduce using rule 74 (constant)
    ARITMETIC_OP_ADDITIVE        reduce using rule 74 (constant)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 74 (constant)
    RELATIONAL_OP                reduce using rule 74 (constant)
    EQUALITY_OP                  reduce using rule 74 (constant)
    LOGICAL_OP_OR                reduce using rule 74 (constant)
    LOGICAL_OP_AND               reduce using rule 74 (constant)


State 34

   70 variable_declaration_statement: SIMPLE_TYPE • IDENTIFIER ';'
   71                               | SIMPLE_TYPE • LIST_TYPE IDENTIFIER ';'

    LIST_TYPE   shift, and go to state 69
    IDENTIFIER  shift, and go to state 70


State 35

   38 expression: IDENTIFIER • '=' expression
   40 function_call_expression: IDENTIFIER • '(' function_arguments_optative ')'
   64 simple_value: IDENTIFIER •

    '('  shift, and go to state 71
    '='  shift, and go to state 72

    BINARY_LIST_OP               reduce using rule 64 (simple_value)
    ';'                          reduce using rule 64 (simple_value)
    ARITMETIC_OP_ADDITIVE        reduce using rule 64 (simple_value)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 64 (simple_value)
    RELATIONAL_OP                reduce using rule 64 (simple_value)
    EQUALITY_OP                  reduce using rule 64 (simple_value)
    LOGICAL_OP_OR                reduce using rule 64 (simple_value)
    LOGICAL_OP_AND               reduce using rule 64 (simple_value)


State 36

   28 for_statement: RW_FOR • '(' expression_optative ';' or_expression_optative ';' expression_optative ')' statement

    '('  shift, and go to state 73


State 37

   37 return_statement: RW_RETURN • expression ';'

    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    IDENTIFIER             shift, and go to state 35
    UNARY_LIST_OP          shift, and go to state 41
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    expression                 go to state 74
    function_call_expression   go to state 56
    or_expression              go to state 57
    and_expression             go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    list_expression            go to state 61
    addition_expression        go to state 62
    multiplication_expression  go to state 63
    simple_value               go to state 64
    constant                   go to state 66


State 38

   29 if_else_statement: RW_IF • '(' expression ')' statement
   30                  | RW_IF • '(' expression ')' statement RW_ELSE statement

    '('  shift, and go to state 75


State 39

   34 input_statement: IO_READ • '(' IDENTIFIER ')' ';'

    '('  shift, and go to state 76


State 40

   35 output_statement: IO_WRITE • '(' expression ')' ';'
   36                 | IO_WRITE • '(' LIT_STRING ')' ';'

    '('  shift, and go to state 77


State 41

   67 simple_value: UNARY_LIST_OP • simple_value

    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    IDENTIFIER             shift, and go to state 78
    UNARY_LIST_OP          shift, and go to state 41
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    function_call_expression  go to state 56
    simple_value              go to state 79
    constant                  go to state 66


State 42

    7 block: '{' • statements '}'

    error                  shift, and go to state 135
    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    SIMPLE_TYPE            shift, and go to state 136
    IDENTIFIER             shift, and go to state 35
    RW_FOR                 shift, and go to state 137
    RW_RETURN              shift, and go to state 138
    RW_IF                  shift, and go to state 139
    IO_READ                shift, and go to state 140
    IO_WRITE               shift, and go to state 141
    UNARY_LIST_OP          shift, and go to state 41
    '{'                    shift, and go to state 142
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    block                           go to state 143
    statements                      go to state 80
    statement                       go to state 81
    for_statement                   go to state 144
    if_else_statement               go to state 145
    expression_statement            go to state 146
    io_statement                    go to state 147
    input_statement                 go to state 148
    output_statement                go to state 149
    return_statement                go to state 150
    expression                      go to state 151
    function_call_expression        go to state 56
    or_expression                   go to state 57
    and_expression                  go to state 58
    equality_expression             go to state 59
    relational_expression           go to state 60
    list_expression                 go to state 61
    addition_expression             go to state 62
    multiplication_expression       go to state 63
    simple_value                    go to state 64
    variable_declaration_statement  go to state 152
    constant                        go to state 66


State 43

   68 simple_value: '(' • expression ')'

    C_INTEGER              shift, and go to state 153
    C_FLOAT                shift, and go to state 154
    C_NIL                  shift, and go to state 155
    IDENTIFIER             shift, and go to state 156
    UNARY_LIST_OP          shift, and go to state 157
    '('                    shift, and go to state 158
    '!'                    shift, and go to state 159
    ARITMETIC_OP_ADDITIVE  shift, and go to state 160

    expression                 go to state 82
    function_call_expression   go to state 161
    or_expression              go to state 162
    and_expression             go to state 163
    equality_expression        go to state 164
    relational_expression      go to state 165
    list_expression            go to state 166
    addition_expression        go to state 167
    multiplication_expression  go to state 168
    simple_value               go to state 169
    constant                   go to state 170


State 44

   66 simple_value: '!' • simple_value

    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    IDENTIFIER             shift, and go to state 78
    UNARY_LIST_OP          shift, and go to state 41
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    function_call_expression  go to state 56
    simple_value              go to state 83
    constant                  go to state 66


State 45

   65 simple_value: ARITMETIC_OP_ADDITIVE • simple_value

    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    IDENTIFIER             shift, and go to state 78
    UNARY_LIST_OP          shift, and go to state 41
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    function_call_expression  go to state 56
    simple_value              go to state 84
    constant                  go to state 66


State 46

   16 statement: block •

    $end         reduce using rule 16 (statement)
    SIMPLE_TYPE  reduce using rule 16 (statement)


State 47

   19 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' $@1 parameters_optative ')' statement •

    $end         reduce using rule 19 (function_declaration_statement)
    SIMPLE_TYPE  reduce using rule 19 (function_declaration_statement)


State 48

   14 statement: for_statement •

    $end         reduce using rule 14 (statement)
    SIMPLE_TYPE  reduce using rule 14 (statement)


State 49

   15 statement: if_else_statement •

    $end         reduce using rule 15 (statement)
    SIMPLE_TYPE  reduce using rule 15 (statement)


State 50

   10 statement: expression_statement •

    $end         reduce using rule 10 (statement)
    SIMPLE_TYPE  reduce using rule 10 (statement)


State 51

   11 statement: io_statement •

    $end         reduce using rule 11 (statement)
    SIMPLE_TYPE  reduce using rule 11 (statement)


State 52

   32 io_statement: input_statement •

    $end         reduce using rule 32 (io_statement)
    SIMPLE_TYPE  reduce using rule 32 (io_statement)


State 53

   33 io_statement: output_statement •

    $end         reduce using rule 33 (io_statement)
    SIMPLE_TYPE  reduce using rule 33 (io_statement)


State 54

   12 statement: return_statement •

    $end         reduce using rule 12 (statement)
    SIMPLE_TYPE  reduce using rule 12 (statement)


State 55

   31 expression_statement: expression • ';'

    ';'  shift, and go to state 85


State 56

   69 simple_value: function_call_expression •

    BINARY_LIST_OP               reduce using rule 69 (simple_value)
    ';'                          reduce using rule 69 (simple_value)
    ARITMETIC_OP_ADDITIVE        reduce using rule 69 (simple_value)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 69 (simple_value)
    RELATIONAL_OP                reduce using rule 69 (simple_value)
    EQUALITY_OP                  reduce using rule 69 (simple_value)
    LOGICAL_OP_OR                reduce using rule 69 (simple_value)
    LOGICAL_OP_AND               reduce using rule 69 (simple_value)


State 57

   39 expression: or_expression •
   49 or_expression: or_expression • LOGICAL_OP_OR and_expression

    LOGICAL_OP_OR  shift, and go to state 86

    ';'  reduce using rule 39 (expression)


State 58

   50 or_expression: and_expression •
   51 and_expression: and_expression • LOGICAL_OP_AND equality_expression

    LOGICAL_OP_AND  shift, and go to state 87

    ';'            reduce using rule 50 (or_expression)
    LOGICAL_OP_OR  reduce using rule 50 (or_expression)


State 59

   52 and_expression: equality_expression •
   53 equality_expression: equality_expression • EQUALITY_OP relational_expression

    EQUALITY_OP  shift, and go to state 88

    ';'             reduce using rule 52 (and_expression)
    LOGICAL_OP_OR   reduce using rule 52 (and_expression)
    LOGICAL_OP_AND  reduce using rule 52 (and_expression)


State 60

   54 equality_expression: relational_expression •
   55 relational_expression: relational_expression • RELATIONAL_OP list_expression

    RELATIONAL_OP  shift, and go to state 89

    ';'             reduce using rule 54 (equality_expression)
    EQUALITY_OP     reduce using rule 54 (equality_expression)
    LOGICAL_OP_OR   reduce using rule 54 (equality_expression)
    LOGICAL_OP_AND  reduce using rule 54 (equality_expression)


State 61

   56 relational_expression: list_expression •

    ';'             reduce using rule 56 (relational_expression)
    RELATIONAL_OP   reduce using rule 56 (relational_expression)
    EQUALITY_OP     reduce using rule 56 (relational_expression)
    LOGICAL_OP_OR   reduce using rule 56 (relational_expression)
    LOGICAL_OP_AND  reduce using rule 56 (relational_expression)


State 62

   57 list_expression: addition_expression • BINARY_LIST_OP list_expression
   58                | addition_expression •
   59 addition_expression: addition_expression • ARITMETIC_OP_ADDITIVE multiplication_expression

    BINARY_LIST_OP         shift, and go to state 90
    ARITMETIC_OP_ADDITIVE  shift, and go to state 91

    ';'             reduce using rule 58 (list_expression)
    RELATIONAL_OP   reduce using rule 58 (list_expression)
    EQUALITY_OP     reduce using rule 58 (list_expression)
    LOGICAL_OP_OR   reduce using rule 58 (list_expression)
    LOGICAL_OP_AND  reduce using rule 58 (list_expression)


State 63

   60 addition_expression: multiplication_expression •
   61 multiplication_expression: multiplication_expression • ARITMETIC_OP_MULTIPLICATIVE simple_value

    ARITMETIC_OP_MULTIPLICATIVE  shift, and go to state 92

    BINARY_LIST_OP         reduce using rule 60 (addition_expression)
    ';'                    reduce using rule 60 (addition_expression)
    ARITMETIC_OP_ADDITIVE  reduce using rule 60 (addition_expression)
    RELATIONAL_OP          reduce using rule 60 (addition_expression)
    EQUALITY_OP            reduce using rule 60 (addition_expression)
    LOGICAL_OP_OR          reduce using rule 60 (addition_expression)
    LOGICAL_OP_AND         reduce using rule 60 (addition_expression)


State 64

   62 multiplication_expression: simple_value •

    BINARY_LIST_OP               reduce using rule 62 (multiplication_expression)
    ';'                          reduce using rule 62 (multiplication_expression)
    ARITMETIC_OP_ADDITIVE        reduce using rule 62 (multiplication_expression)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 62 (multiplication_expression)
    RELATIONAL_OP                reduce using rule 62 (multiplication_expression)
    EQUALITY_OP                  reduce using rule 62 (multiplication_expression)
    LOGICAL_OP_OR                reduce using rule 62 (multiplication_expression)
    LOGICAL_OP_AND               reduce using rule 62 (multiplication_expression)


State 65

   13 statement: variable_declaration_statement •

    $end         reduce using rule 13 (statement)
    SIMPLE_TYPE  reduce using rule 13 (statement)


State 66

   63 simple_value: constant •

    BINARY_LIST_OP               reduce using rule 63 (simple_value)
    ';'                          reduce using rule 63 (simple_value)
    ARITMETIC_OP_ADDITIVE        reduce using rule 63 (simple_value)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 63 (simple_value)
    RELATIONAL_OP                reduce using rule 63 (simple_value)
    EQUALITY_OP                  reduce using rule 63 (simple_value)
    LOGICAL_OP_OR                reduce using rule 63 (simple_value)
    LOGICAL_OP_AND               reduce using rule 63 (simple_value)


State 67

   24 parameters: parameters ',' parameter •

    ')'  reduce using rule 24 (parameters)
    ','  reduce using rule 24 (parameters)


State 68

   21 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' $@2 parameters_optative ')' statement •

    $end         reduce using rule 21 (function_declaration_statement)
    SIMPLE_TYPE  reduce using rule 21 (function_declaration_statement)


State 69

   71 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 93


State 70

   70 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER • ';'

    ';'  shift, and go to state 14


State 71

   40 function_call_expression: IDENTIFIER '(' • function_arguments_optative ')'

    C_INTEGER              shift, and go to state 171
    C_FLOAT                shift, and go to state 172
    C_NIL                  shift, and go to state 173
    IDENTIFIER             shift, and go to state 174
    UNARY_LIST_OP          shift, and go to state 175
    '('                    shift, and go to state 176
    '!'                    shift, and go to state 177
    ARITMETIC_OP_ADDITIVE  shift, and go to state 178

    ')'  reduce using rule 41 (function_arguments_optative)

    expression                   go to state 94
    function_call_expression     go to state 179
    function_arguments_optative  go to state 95
    function_arguments           go to state 96
    or_expression                go to state 180
    and_expression               go to state 181
    equality_expression          go to state 182
    relational_expression        go to state 183
    list_expression              go to state 184
    addition_expression          go to state 185
    multiplication_expression    go to state 186
    simple_value                 go to state 187
    constant                     go to state 188


State 72

   38 expression: IDENTIFIER '=' • expression

    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    IDENTIFIER             shift, and go to state 35
    UNARY_LIST_OP          shift, and go to state 41
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    expression                 go to state 97
    function_call_expression   go to state 56
    or_expression              go to state 57
    and_expression             go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    list_expression            go to state 61
    addition_expression        go to state 62
    multiplication_expression  go to state 63
    simple_value               go to state 64
    constant                   go to state 66


State 73

   28 for_statement: RW_FOR '(' • expression_optative ';' or_expression_optative ';' expression_optative ')' statement

    C_INTEGER              shift, and go to state 31
    C_FLOAT                shift, and go to state 32
    C_NIL                  shift, and go to state 33
    IDENTIFIER             shift, and go to state 35
    UNARY_LIST_OP          shift, and go to state 41
    '('                    shift, and go to state 43
    '!'                    shift, and go to state 44
    ARITMETIC_OP_ADDITIVE  shift, and go to state 45

    ';'  reduce using rule 45 (expression_optative)

    expression                 go to state 98
    function_call_expression   go to state 56
    expression_optative        go to state 99
    or_expression              go to state 57
    and_expression             go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    list_expression            go to state 61
    addition_expression        go to state 62
    multiplication_expression  go to state 63
    simple_value               go to state 64
    constant                   go to state 66


State 74

   37 return_statement: RW_RETURN expression • ';'

    ';'  shift, and go to state 100


State 75

   29 if_else_statement: RW_IF '(' • expression ')' statement
   30                  | RW_IF '(' • expression ')' statement RW_ELSE statement

    C_INTEGER              shift, and go to state 153
    C_FLOAT                shift, and go to state 154
    C_NIL                  shift, and go to state 155
    IDENTIFIER             shift, and go to state 156
    UNARY_LIST_OP          shift, and go to state 157
    '('                    shift, and go to state 158
    '!'                    shift, and go to state 159
    ARITMETIC_OP_ADDITIVE  shift, and go to state 160
